Converting data format

--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -825,6 +825,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_76043/2088706453.py:2: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "  df[\"event_date\"] = pd.to_datetime(df[\"event_date\"], errors=\"coerce\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Convert Date Columns to Datetime Format\n",
+    "df[\"event_date\"] = pd.to_datetime(df[\"event_date\"], errors=\"coerce\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
