Basic Exploratory Data Analysis (EDA)
Basic Exploratory Data Analysis (EDA)

--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -844,6 +844,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "event_type\n",
+      "Riots/Protests                                47224\n",
+      "Violence against civilians                    45021\n",
+      "Battle-No change of territory                 44005\n",
+      "Strategic development                         10923\n",
+      "Remote violence                               10456\n",
+      "Battle-Government regains territory            2632\n",
+      "Non-violent transfer of territory              2566\n",
+      "Battle-Non-state actor overtakes territory     2135\n",
+      "Headquarters or base established                771\n",
+      "Remote Violence                                  30\n",
+      "Violence Against Civilians                       21\n",
+      "Battle-no change of territory                    16\n",
+      "Strategic Development                             7\n",
+      "Strategic development                             1\n",
+      "Name: count, dtype: int64\n",
+      "country\n",
+      "Somalia                         25232\n",
+      "Democratic Republic of Congo    12294\n",
+      "Nigeria                         12253\n",
+      "Sudan                           12018\n",
+      "South Africa                    10887\n",
+      "Egypt                            9290\n",
+      "Burundi                          7396\n",
+      "Libya                            6532\n",
+      "Zimbabwe                         6001\n",
+      "Kenya                            5812\n",
+      "Algeria                          5309\n",
+      "Uganda                           5185\n",
+      "South Sudan                      5144\n",
+      "Ethiopia                         5035\n",
+      "Sierra Leone                     4669\n",
+      "Tunisia                          4493\n",
+      "Central African Republic         3973\n",
+      "Angola                           3181\n",
+      "Ivory Coast                      1804\n",
+      "Mali                             1753\n",
+      "Liberia                          1369\n",
+      "Morocco                          1355\n",
+      "Zambia                           1289\n",
+      "Senegal                          1132\n",
+      "Madagascar                       1064\n",
+      "Burkina Faso                     1032\n",
+      "Cameroon                          937\n",
+      "Guinea                            894\n",
+      "Mozambique                        886\n",
+      "Namibia                           754\n",
+      "Tanzania                          746\n",
+      "Chad                              732\n",
+      "Ghana                             671\n",
+      "Niger                             660\n",
+      "Rwanda                            633\n",
+      "Republic of Congo                 473\n",
+      "Mauritania                        467\n",
+      "Malawi                            434\n",
+      "Eritrea                           408\n",
+      "Togo                              258\n",
+      "Guinea-Bissau                     233\n",
+      "Gabon                             215\n",
+      "Swaziland                         198\n",
+      "Gambia                            190\n",
+      "Benin                             187\n",
+      "Lesotho                           118\n",
+      "Djibouti                          112\n",
+      "Botswana                           53\n",
+      "Equatorial Guinea                  46\n",
+      "Mozambique                          1\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Basic Exploratory Data Analysis (EDA)\n",
+    "print(df[\"event_type\"].value_counts())  # Count unique event types\n",
+    "print(df[\"country\"].value_counts())  # See event distribution per country\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
