--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -930,6 +930,186 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>event_date</th>\n",
+       "      <th>fatalities</th>\n",
+       "      <th>geo_precision</th>\n",
+       "      <th>gwno</th>\n",
+       "      <th>inter1</th>\n",
+       "      <th>inter2</th>\n",
+       "      <th>interaction</th>\n",
+       "      <th>time_precision</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>165808</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2011-03-26 18:33:14.711955968</td>\n",
+       "      <td>4.420257</td>\n",
+       "      <td>1.261061</td>\n",
+       "      <td>538.296964</td>\n",
+       "      <td>3.385500</td>\n",
+       "      <td>3.193603</td>\n",
+       "      <td>32.001604</td>\n",
+       "      <td>1.138751</td>\n",
+       "      <td>2010.760898</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1997-01-01 00:00:00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>404.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1997.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2007-10-22 00:00:00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>490.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2007.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2013-08-03 00:00:00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>520.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2013.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2016-01-06 00:00:00</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>615.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>47.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2016.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2017-07-29 00:00:00</td>\n",
+       "      <td>25000.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>651.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2017.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>76.071441</td>\n",
+       "      <td>0.524248</td>\n",
+       "      <td>61.974200</td>\n",
+       "      <td>2.033114</td>\n",
+       "      <td>2.920635</td>\n",
+       "      <td>18.284381</td>\n",
+       "      <td>0.441038</td>\n",
+       "      <td>5.897476</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          event_date     fatalities  geo_precision  \\\n",
+       "count                         165808  165808.000000  165808.000000   \n",
+       "mean   2011-03-26 18:33:14.711955968       4.420257       1.261061   \n",
+       "min              1997-01-01 00:00:00       0.000000       1.000000   \n",
+       "25%              2007-10-22 00:00:00       0.000000       1.000000   \n",
+       "50%              2013-08-03 00:00:00       0.000000       1.000000   \n",
+       "75%              2016-01-06 00:00:00       1.000000       1.000000   \n",
+       "max              2017-07-29 00:00:00   25000.000000       3.000000   \n",
+       "std                              NaN      76.071441       0.524248   \n",
+       "\n",
+       "                gwno         inter1         inter2    interaction  \\\n",
+       "count  165808.000000  165808.000000  165808.000000  165808.000000   \n",
+       "mean      538.296964       3.385500       3.193603      32.001604   \n",
+       "min       404.000000       1.000000       0.000000      10.000000   \n",
+       "25%       490.000000       1.000000       0.000000      15.000000   \n",
+       "50%       520.000000       3.000000       2.000000      28.000000   \n",
+       "75%       615.000000       5.000000       7.000000      47.000000   \n",
+       "max       651.000000       8.000000       8.000000      88.000000   \n",
+       "std        61.974200       2.033114       2.920635      18.284381   \n",
+       "\n",
+       "       time_precision           year  \n",
+       "count   165808.000000  165808.000000  \n",
+       "mean         1.138751    2010.760898  \n",
+       "min          1.000000    1997.000000  \n",
+       "25%          1.000000    2007.000000  \n",
+       "50%          1.000000    2013.000000  \n",
+       "75%          1.000000    2016.000000  \n",
+       "max          3.000000    2017.000000  \n",
+       "std          0.441038       5.897476  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Summary statistics for numerical columns\n",
+    "df.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
