Count unique values for categorical columns
I had to convertr all column names to upper because the code was showing an error, and that was because it is case sensitive.

--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -1110,6 +1110,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['actor1', 'actor2', 'admin1', 'admin2', 'country', 'event_date',\n",
+      "       'event_id_cnty', 'event_type', 'fatalities', 'geo_precision', 'gwno',\n",
+      "       'inter1', 'inter2', 'interaction', 'latitude', 'location', 'longitude',\n",
+      "       'notes', 'source', 'time_precision', 'year'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = df.columns.str.upper()  # Convert all column names to uppercase\n",
+    "#I had to convertr all column names to upper because the code bellow was showing an error, and that was because it is case sensitive. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EVENT_TYPE: 14 unique values\n",
+      "COUNTRY: 50 unique values\n",
+      "ADMIN1: 735 unique values\n",
+      "ACTOR1: 3288 unique values\n",
+      "ACTOR2: 2828 unique values\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count unique values for categorical columns\n",
+    "categorical_columns = ['EVENT_TYPE', 'COUNTRY', 'ADMIN1', 'ACTOR1', 'ACTOR2']\n",
+    "for col in categorical_columns:\n",
+    "    print(f\"{col}: {df[col].nunique()} unique values\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
