Find the most frequent values in key columns

--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -1165,6 +1165,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EVENT_TYPE\n",
+      "Riots/Protests                                47224\n",
+      "Violence against civilians                    45021\n",
+      "Battle-No change of territory                 44005\n",
+      "Strategic development                         10923\n",
+      "Remote violence                               10456\n",
+      "Battle-Government regains territory            2632\n",
+      "Non-violent transfer of territory              2566\n",
+      "Battle-Non-state actor overtakes territory     2135\n",
+      "Headquarters or base established                771\n",
+      "Remote Violence                                  30\n",
+      "Name: count, dtype: int64\n",
+      "COUNTRY\n",
+      "Somalia                         25232\n",
+      "Democratic Republic of Congo    12294\n",
+      "Nigeria                         12253\n",
+      "Sudan                           12018\n",
+      "South Africa                    10887\n",
+      "Egypt                            9290\n",
+      "Burundi                          7396\n",
+      "Libya                            6532\n",
+      "Zimbabwe                         6001\n",
+      "Kenya                            5812\n",
+      "Name: count, dtype: int64\n",
+      "ACTOR1\n",
+      "Unidentified Armed Group (Somalia)    5896\n",
+      "Protesters (South Africa)             5215\n",
+      "Military Forces of Somalia (2012-)    4484\n",
+      "Rioters (South Africa)                3834\n",
+      "Al Shabaab                            3347\n",
+      "Protesters (Egypt)                    3161\n",
+      "Military Forces of Sudan (1989-)      3073\n",
+      "Protesters (Nigeria)                  2961\n",
+      "LRA: Lords Resistance Army            2842\n",
+      "Protesters (Tunisia)                  2693\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Find the most frequent values in key columns \n",
+    "# Most common event types\n",
+    "print(df['EVENT_TYPE'].value_counts().head(10))\n",
+    "\n",
+    "# Most affected countries\n",
+    "print(df['COUNTRY'].value_counts().head(10))\n",
+    "\n",
+    "# Most frequent actors in conflicts\n",
+    "print(df['ACTOR1'].value_counts().head(10))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
