Checking the distribution of fatalities

--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -1225,6 +1225,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    165808.000000\n",
+       "mean          4.420257\n",
+       "std          76.071441\n",
+       "min           0.000000\n",
+       "25%           0.000000\n",
+       "50%           0.000000\n",
+       "75%           1.000000\n",
+       "max       25000.000000\n",
+       "Name: FATALITIES, dtype: float64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Checking the distribution of fatalities \n",
+    "# Check the distribution of fatalities\n",
+    "df['FATALITIES'].describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
