--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "max        88.000000        3.000000    2017.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
        "std          0.441038       5.897476  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1242,7 @@
        "Name: FATALITIES, dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1412,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1460,16 +1460,16 @@
       "Length: 13\n",
       "Categories (13, object): ['Battle-Government regains territory', 'Battle-No change of territory', 'Battle-Non-state actor overtakes territory', 'Battle-no change of territory', ..., 'Strategic Development', 'Strategic development', 'Violence Against Civilians', 'Violence against civilians']\n",
       "                           EVENT_TYPE\n",
-      "83952           Strategic development\n",
-      "3950       Violence against civilians\n",
-      "145716     Violence against civilians\n",
-      "147037     Violence against civilians\n",
-      "105855  Battle-No change of territory\n",
-      "156350     Violence against civilians\n",
-      "159706          Strategic development\n",
-      "90125      Violence against civilians\n",
-      "32019   Battle-No change of territory\n",
-      "134716     Violence against civilians\n"
+      "158615  Battle-No change of territory\n",
+      "93176                  Riots/Protests\n",
+      "56238                  Riots/Protests\n",
+      "1664    Battle-No change of territory\n",
+      "87854                  Riots/Protests\n",
+      "137                    Riots/Protests\n",
+      "67760   Battle-No change of territory\n",
+      "146498  Battle-No change of territory\n",
+      "160332                 Riots/Protests\n",
+      "133033                 Riots/Protests\n"
      ]
     }
    ],
@@ -1482,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1573,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1678,14 +1678,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_9237/2884981455.py:4: FutureWarning: \n",
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_9237/991486771.py:5: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1717,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1756,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1822,6 +1822,17 @@
     "plt.ylabel(\"Fatalities\", fontsize=12)\n",
     "plt.yscale(\"log\")  # Log scale to handle extreme values\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TEST OF VIZ \n",
+    "\n",
+    "import plotly.express as px"
    ]
   },
   {
